--- a/index.css
+++ b/index.css
@@ -30,14 +30,18 @@ img {
 }
 
 .top-info-list {
-	margin-top:4%;
+	margin-top:3%;
 	list-style: none;
 }
 
 li {
-	font-size: 18px;
-	margin-bottom:20px;
+	font-size: 14px;
+	margin-bottom:10px;
 	line-height: 120%;
+}
+
+.top-item {
+	font-size:16px;
 }
 
 .email {
@@ -57,17 +61,17 @@ li {
 }
 
 .topic-list {
-	margin-top:20px;
+	margin-top:10px;
 }
 
 .education-item {
-	font-size: 18px;
+	font-size: 14px;
 	margin-bottom:5px;
 	line-height:120%;
 }
 
 .school-item {
-	font-size:18px;
-	margin-bottom: 20px;
+	font-size:14px;
+	margin-bottom: 10px;
 	line-height: 120%;
 }
